##Text encoding: utf-8

2011-04-10  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/brackets.cc: display square and round brackets of all sizes.
	* libs/gccv/brackets.h: ditto.
	* plugins/paint/selection/brackets.ui: fix UI after API change.
	* plugins/paint/selection/bracketstool.cc: ditto.

2011-04-09  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/brackets.cc: start showing brackets.
	* libs/gccv/brackets.h: ditto.
	* plugins/paint/selection/bracketstool.cc: ditto.

2011-04-02  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/docprop.cc: make things compile with gtk+-2.14.
	* libs/gcp/docprop.h: ditto.
	* libs/gcp/newfiledlg.cc: ditto.
	* libs/gcp/newfiledlg.h: ditto.
	* libs/gcp/preferences.cc: ditto.
	* libs/gcp/preferences.h: ditto.
	* libs/gcp/reaction-prop-dlg.cc: ditto.
	* libs/gcr/atomsdlg.cc: ditto.
	* libs/gcu/filechooser.cc: ditto.
	* libs/gcu/spectrumdoc.cc: ditto.
	* plugins/paint/residues/residues-dlg.cc: ditto.
	* plugins/paint/templates/templatetool.cc: ditto.
	* programs/3d/window.cc: ditto.
	* programs/calc/gchemcalc.cc: ditto.
	* programs/crystal/window.cc: ditto.
	* programs/spectra/window.cc: ditto.
	* programs/table/gchemtable-app.cc: ditto.
	* programs/table/gchemtable-data-allocator.cc: ditto.
	* ui/crystal/atoms.ui: make VBoxes really vertical.

2011-03-24  Jean Bréfort  <jean.brefort@normalesup.org>
	* openbabel/babelserv.cc: don't use POLLRDHUP when not defined. [#32768]
	* osmesa/osmesaserv.cc: ditto.

2011-03-23  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: add new library.
	* libs/Makefile.am: ditto.
	* libs/gccv/brackets.cc: fixed some issues.
	* libs/gccv/brackets.h: ditto.
	* libs/gcp/Makefile.am: add new library.
	* libs/gcp/brackets.cc: fixed brackets creation.
	* libs/gcp/brackets.h: ditto.
	* libs/gcp/document.cc: fixed saving.
	* libs/gcp/tools.h: add new library.
	* libs/gcr/Makefile.am: ditto..
	* libs/gcr/atomsdlg.h: ditto.